2010-03-06  Miguel de Icaza  <miguel@novell.com>

	* ObjCRuntime/*: Make this build by making the use of "IntPtr"
	uniform in the Messaging classes and its consumers.

2010-02-22  Miguel de Icaza  <miguel@novell.com>

	* appkit.cs: Added NSWindow, NSWindowController
